# horizon

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
config/: settings.json  settings.schema.json
docs/: README.md
docs/guide/: 00-index.md  01-purpose.md  02-architecture.md  03-installation.md  04-configuration.md  05-pattern-detection.md  06-classification.md  07-mqtt.md  08-data-import.md  09-rebuild.md  10-stats.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  main.tsx  vite-env.d.ts
frontend/src/api/: client.ts  config.ts  import.ts  search.ts  types.ts  vehicles.ts
frontend/src/components/analytics/: ClassificationPanel.tsx  StatsPanel.tsx  TrendChart.tsx
frontend/src/components/config/: ClassificationConfig.tsx  ConfigValidationPanel.tsx  DisplayConfig.tsx  ImportConfig.tsx  ImportStatusModal.tsx  MQTTConfig.tsx  PatternDetectionConfig.tsx  ReprocessStatusModal.tsx
frontend/src/components/grid/: PatternGridVisualization.tsx
frontend/src/components/layout/: Footer.tsx  Header.tsx
frontend/src/components/theme/: ThemeProvider.tsx  ThemeToggle.tsx
frontend/src/components/ui/: InfoTooltip.tsx  (+1 more)
frontend/src/hooks/: useConfiguration.ts  useImport.ts  useMQTTStatus.ts  useTheme.ts  useVehicleData.ts
frontend/src/lib/: utils.ts
frontend/src/pages/: ConfigurationPage.tsx  HomePage.tsx  NotFoundPage.tsx  VehiclePage.tsx
frontend/src/styles/: globals.css
src/horizon/: __init__.py  analysis.py  processor.py
src/horizon/frigate/: __init__.py  extractor.py  import_service.py  inspector.py
src/horizon/mqtt/: __init__.py  deduplicator.py  event_logger.py  listener.py  processor.py  profile_manager.py  service.py
src/horizon/rebuild/: __init__.py  rebuild_service.py
src/webui/: __init__.py  main.py
src/webui/api/: __init__.py  config.py  frigate_import.py  search.py  status.py  vehicles.py
src/webui/models/: __init__.py  config.py  grid.py  vehicle.py
src/webui/services/: __init__.py  config_service.py  vehicle_service.py
tests/: __init__.py  test_processor.py
